# malwerks

./: .gitignore  Cargo.toml  README.md  about.hbs
.github/: FUNDING.yml
malwerks_bundles/: Cargo.toml
malwerks_bundles/src/: lib.rs  resource_compression.rs
malwerks_core/: Cargo.toml
malwerks_core/src/: gpu_profiler.rs  lib.rs  pipeline_bundle.rs  render_layer.rs  resource_bundle.rs  shader_module_bundle.rs  upload_batch.rs
malwerks_dds/: Cargo.toml
malwerks_dds/src/: dds.rs  lib.rs
malwerks_external/: Cargo.toml
malwerks_external/src/: lib.rs  meshopt.rs  texconv.rs
malwerks_gltf/: Cargo.toml
malwerks_gltf/src/: global_resources.rs  gltf_images.rs  gltf_material_instances.rs  gltf_materials.rs  gltf_meshes.rs  gltf_nodes.rs  gltf_shaders.rs  gltf_shared.rs  lib.rs
malwerks_light_baker/: Cargo.toml
malwerks_light_baker/src/: acceleration_structure.rs  environment_probes.rs  lib.rs  main.rs  shader_binding_table.rs
malwerks_playground/: Cargo.toml  build.rs
malwerks_playground/src/: camera_state.rs  debug_ui.rs  demo_pbr_forward_lit.rs  forward_pass.rs  imgui_graphics.rs  imgui_winit.rs  input_map.rs  main.rs  post_process.rs  shared_frame_data.rs  shared_resource_bundle.rs  sky_box.rs  surface_pass.rs  surface_winit.rs
malwerks_ply/: Cargo.toml
malwerks_ply/src/: lib.rs  parse_ply.rs  ply_structs.rs
malwerks_render/: Cargo.toml
malwerks_render/src/: anti_aliasing.rs  backbuffer_pass.rs  bundle_loader.rs  camera.rs  common_shaders.rs  forward_pass.rs  gpu_profiler.rs  imgui_renderer.rs  internal.rs  lib.rs  material_shaders.rs  mesh_cluster_culling.rs  occluder_pass.rs  occluder_resolve.rs  pbr_forward_lit.rs  pbr_resource_bundle.rs  pipeline_bundle.rs  post_process.rs  render_bundle.rs  render_layer.rs  render_pass.rs  render_stage_bundle.rs  render_state_bundle.rs  render_world.rs  resource_bundle.rs  shader_module_bundle.rs  shared_frame_data.rs  sky_box.rs  static_scenery.rs  test_pbr_forward_lit.rs  test_render_passes.rs  tone_map.rs  upload_batch.rs  virtual_geometry.rs
malwerks_resources/: Cargo.toml
malwerks_resources/src/: lib.rs  resource_compression.rs
malwerks_shaders/: anti_aliasing.glsl  apex_culling.glsl  count_to_dispatch.glsl  environment_probe.glsl  gltf_pbr_material.glsl  imgui.frag  imgui.glsl  imgui.vert  occluder_material.glsl  occluder_resolve.glsl  occlusion_culling.glsl  pbr_material.glsl  post_process.frag  post_process.vert  postprocess.glsl  sky_box.glsl  tone_map.glsl
malwerks_tools/: Cargo.toml
malwerks_tools/src/: bake_lightmaps.rs  convert_metallic_roughness.rs  convert_probe.rs  dds.rs  global_resources.rs  gltf_images.rs  gltf_materials.rs  gltf_meshes.rs  gltf_nodes.rs  gltf_shared.rs  halton_sequence.rs  import_gltf.rs  import_ply.rs  invert_normal_map.rs  meshopt.rs  precompute_brdf.rs  texconv.rs
malwerks_vk/: Cargo.toml
malwerks_vk/src/: command_buffer.rs  device.rs  device_factory.rs  device_queue.rs  frame_context.rs  graphics_device.rs  graphics_factory.rs  graphics_utils.rs  internal.rs  lib.rs  utils.rs
