[package]
name = "malwerks_external"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
malwerks_resources = { path = "../malwerks_resources" }
malwerks_dds = { path = "../malwerks_dds" }

ash = "*"
log = "*"
meshopt = "*"
bytemuck = "*"
