[package]
name = "malwerks_light_baker"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"

[dependencies]
malwerks_vk = { path = "../malwerks_vk" }
malwerks_render = { path = "../malwerks_render" }
malwerks_resources = { path = "../malwerks_resources" }
malwerks_dds = { path = "../malwerks_dds" }
log = "*"
pretty_env_logger = "*"
ash = "*"
shaderc = "*"
