[package]
name = "malwerks_playground"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

default-run = "malwerks_playground"

[dependencies]
malwerks_vk = { path = "../malwerks_vk" }
malwerks_render = { path = "../malwerks_render" }

ash = "*"
log = "*"
pretty_env_logger = "*"
winit = "*"
#imgui = "*"
imgui = "0.4"
gilrs = "*"
puffin = "*"
puffin-imgui = "*"
structopt = "*"

[build-dependencies]
depgraph = "*"
shaderc = "*"

[target.'cfg(windows)'.dependencies]
winapi = "*"

[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = "*"
cocoa = "*"
objc = "*"
