[package]
name = "malwerks_playground"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

default-run = "malwerks_playground"

[dependencies]
malwerks_vk = { path = "../malwerks_vk" }
malwerks_bundles = { path = "../malwerks_bundles" }
malwerks_core = { path = "../malwerks_core" }
malwerks_gltf = { path = "../malwerks_gltf" }

# TODO: Decouple malwerks_external
malwerks_external = { path = "../malwerks_external" }

ash = "*"
log = "*"
pretty_env_logger = "*"
winit = "*"
#imgui = "*"
imgui = "0.4"
gilrs = "*"
puffin = "*"
puffin-imgui = "*"
structopt = "*"
ultraviolet = "*"

# TODO: Decouple serde, bincode and shaderc dependencies
serde = { version = "*", features = ["derive"] }
shaderc = "*"
bincode = "*"

[target.'cfg(windows)'.dependencies]
winapi = "*"

[target.'cfg(target_os = "macos")'.dependencies]
metal-rs = "*"
cocoa = "*"
objc = "*"
