[package]
name = "malwerks_render"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
malwerks_vk = { path = "../malwerks_vk" }
malwerks_resources = { path = "../malwerks_resources" }
log = "*"
ultraviolet = "*"
rayon = "*"
puffin = "*"

[dev-dependencies]
malwerks_dds = { path = "../malwerks_dds" }
ash = "*"
pretty_env_logger = "*"
