[package]
name = "malwerks_tools"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
malwerks_dds = { path = "../malwerks_dds" }
malwerks_ply = { path = "../malwerks_ply" }
malwerks_resources = { path = "../malwerks_resources" }
malwerks_external = { path = "../malwerks_external" }
malwerks_gltf = { path = "../malwerks_gltf" }

ash = "*"
log = "*"
pretty_env_logger = "*"
logging_timer = "*"
shaderc = "*"
ultraviolet = "*"
rayon = "*"
indicatif = "*"
image = "*"
structopt = "*"
bytemuck = "*"

[dependencies.gltf]
version = "*"
default-features = false
features = ["names"]

[[bin]]
name = "import_gltf"
path = "src/import_gltf.rs"

[[bin]]
name = "precompute_brdf"
path = "src/precompute_brdf.rs"

[[bin]]
name = "convert_probe"
path = "src/convert_probe.rs"

[[bin]]
name = "convert_metallic_roughness"
path = "src/convert_metallic_roughness.rs"

# [[bin]]
# name = "bake_lightmaps"
# path = "src/bake_lightmaps.rs"

[[bin]]
name = "import_ply"
path = "src/import_ply.rs"
