[package]
name = "malwerks_tools"
version = "0.1.0"
authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
malwerks_dds = { path = "../malwerks_dds" }
malwerks_ply = { path = "../malwerks_ply" }
malwerks_bundles = { path = "../malwerks_bundles" }
malwerks_external = { path = "../malwerks_external" }
malwerks_gltf = { path = "../malwerks_gltf" }

log = "*"
pretty_env_logger = "*"
logging_timer = "*"
ultraviolet = "*"
rayon = "*"
indicatif = "*"
image = "*"
structopt = "*"

[[bin]]
name = "import_gltf"
path = "src/import_gltf.rs"

[[bin]]
name = "precompute_brdf"
path = "src/precompute_brdf.rs"

[[bin]]
name = "convert_probe"
path = "src/convert_probe.rs"

[[bin]]
name = "convert_metallic_roughness"
path = "src/convert_metallic_roughness.rs"

# [[bin]]
# name = "bake_lightmaps"
# path = "src/bake_lightmaps.rs"

[[bin]]
name = "import_ply"
path = "src/import_ply.rs"

[[bin]]
name = "halton_sequence"
path = "src/halton_sequence.rs"
